test(domain): add happy path tests for Anomaly aggregate